@@ -27,10 +27,12 @@
 -------------------------------------------------------------------------*/
 
 #include <uchar.h>
-#include <wchar.h>
+
+#include <stdlib.h>
 
 size_t c32rtomb(char *restrict s, char32_t c32, mbstate_t *restrict ps)
 {
-	return(wcrtomb(s, c32, ps));
+	ps;
+	return(wctomb(s, c32));
 }
 
